fix: video playback on iOS for recordings, add custom controls to resolve issue with default controls

--- a/src/app.css
+++ b/src/app.css
@@ -148,7 +148,8 @@
 		@apply select-text;
 	}
 
-	button {
+	.native,
+	.native * {
 		@apply select-none;
 	}
 
